Last fix on instruction title on mobile

--- a/styles/global.less
+++ b/styles/global.less
@@ -68,6 +68,27 @@ img {
   @media (max-width: 767px){
     padding: 0;
   }
+  > p {
+    padding-bottom: 15px;
+    padding-top: 15px;
+    @media (min-width: 992px) {
+      display: none;
+    }
+    @media (max-width: 991px) {
+      max-width: 500px;
+      margin: 0 auto;
+    }
+    @media (max-width: 767px)
+    {
+      max-width: 320px;
+    }
+    @media (max-width: 340px)
+    {
+      > img {
+        padding: 0 8px;
+      }
+    }
+  }
 }
 
 .button-container{
@@ -151,6 +172,9 @@ img {
   width:77%;
   margin-top:10px;
   margin-bottom:10px;
+  @media (max-width: 991px) {
+    display: none;
+  }
 }
 .effect-content {
   @media (max-width: 991px) {
